css tweaks, typo fix

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         🎶&quot;
       </p>
       <p><button type="button" id="generate">Next Verse</button></p>
-      <br>
-      <p>Lyrics by <a href="https://twitter.com/MattGourley">Matt Gourley</a>. Site by <a href="https://twitter.com/TheBenCentra">Ben Centra</a>.</p>
-      <p>Listen to <a href="http://www.earwolf.com/show/pistol-shrimps-radio/">Pistol Shrimps Radio</a>!</p>
+      <div id="links">
+        <p>Lyrics by <a href="https://twitter.com/MattGourley">Matt Gourley</a>. Site by <a href="https://twitter.com/TheBenCentra">Ben Centra</a>.</p>
+        <p>Listen to <a href="http://www.earwolf.com/show/pistol-shrimps-radio/">Pistol Shrimps Radio</a>!</p>
+      </div>
     </div>
-    <script src="http://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-    <script src="../generator.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+    <script src="./generator.js"></script>
   </body>
 </html>
