adding original lyrics, css fixes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h2>&quot;Me N&apos; Cloris Leachman&quot; Song Generator</h2>
+      <div id="title">&quot;Me N&apos; Cloris Leachman&quot; Song Generator</div>
       <p id="lyrics" style="display: none;">
         &quot;🎶 Me and
         <span id="person">Cloris Leachman</span>
@@ -25,5 +25,17 @@
     </div>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
     <script src="./generator.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-55081307-1', 'auto');
+      ga('send', 'pageview', {
+        'page': '/me-n-cloris',
+        'title': '"Me N\' Cloris Leachman" Song Generator'
+      });
+    </script>
   </body>
 </html>
