--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <span id="person">Cloris Leachman</span>
         <span id="verb">Drinkin</span>&apos;
         <span id="noun">Barley Pops</span>
-        at
+        down at
         <span id="place">Fuckman's Leap</span>
         🎶&quot;
       </p>
